--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,7 +5,7 @@ $block-width-sm: 768px;
 // Colors
 
 // Dark Theme
-$clr-darker: hsl(240, 20%, 12%);
-$clr-dark: hsl(235, 24%, 19%);
+$clr-body-bg: hsl(240, 20%, 12%);
+$clr-app-bg: hsl(235, 24%, 19%);
 $clr-active: hsl(222, 70%, 59%);
-$clr-light: hsl(236, 35%, 85%);
+$clr-font: hsl(236, 35%, 85%);
