--- a/src/scss/_todo-app.scss
+++ b/src/scss/_todo-app.scss
@@ -5,6 +5,7 @@
     --elt-pad-x: 1rem;
     --elt-radius: 5px;
     --spacing: 1rem;
+    --time: 200ms;
 
     color: $clr-font;
     position: relative;
@@ -37,6 +38,8 @@
     }
 
     &__item {
+        display: flex;
+        justify-content: space-between;
         width: 100%;
         border-bottom: 1px solid rgba($clr-font, 0.5);
     }
@@ -76,30 +79,43 @@
         display: none;
     }
 
+    &__close {
+        padding: 0.5rem;
+        background: url(../images/icon-cross.svg) center center / contain
+            no-repeat;
+        opacity: 0;
+        transition: opacity var(--time) ease;
+    }
+
+    &__item:hover .todo-app__close {
+        opacity: 1;
+    }
+
     &__label {
+        --size: 1.25rem;
         position: relative;
-        display: block;
+        flex-grow: 1;
         cursor: pointer;
         padding-left: 3rem;
+        margin-right: 1rem;
+        transition: color var(--time) ease;
     }
 
     &__label::before {
-        --size: 1.25rem;
-        --time: 200ms;
         content: "";
         position: absolute;
         top: calc(50% - var(--size) / 2);
         left: 0;
         height: var(--size);
         width: var(--size);
-
-        border: 2px solid;
-        border-color: grey;
+        border: 1px solid;
+        border-color: $clr-font;
         border-radius: 50%;
         background-clip: border-box;
         box-shadow: inset 0 0 0 var(--size) $clr-app-bg;
         background: url(../images/icon-check.svg) center/ 50% no-repeat,
-            linear-gradient(120deg, red, blue) center center / 200% 200%;
+            linear-gradient(120deg, $clr-gr-1, $clr-gr-2) center center / 200%
+                200%;
         transition: border-color var(--time) ease, box-shadow var(--time) ease;
     }
 
@@ -110,6 +126,11 @@
 
     &__checkbox:checked + .todo-app__label::before {
         box-shadow: none;
+    }
+
+    &__checkbox:checked + .todo-app__label {
+        color: rgba($clr-font, 0.2);
+        text-decoration: line-through;
     }
 }
 
