--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -27,3 +27,12 @@ ul {
 input {
     color: unset;
 }
+
+button {
+    cursor: pointer;
+    padding: unset;
+    background-color: unset;
+    border: unset;
+    border-radius: unset;
+    color: unset;
+}
