--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -20,8 +20,8 @@ ul {
     max-width: $block-width-sm;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
 
 input {
@@ -35,4 +35,8 @@ button {
     border: unset;
     border-radius: unset;
     color: unset;
+}
+
+.title {
+    margin-top: 0;
 }
