--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -9,5 +9,8 @@ $clr-body-bg: hsl(240, 20%, 12%);
 $clr-app-bg: hsl(235, 24%, 19%);
 $clr-active: hsl(222, 70%, 59%);
 $clr-font: hsl(236, 35%, 85%);
-$clr-gr-1: red;
-$clr-gr-2: blue;
+$clr-gr-1: hsl(320, 100%, 50%);
+$clr-gr-2: hsl(222, 70%, 59%);
+
+// Fonts
+$ff-primary: Arial, Helvetica, sans-serif;
